--- a/challenge_config.yaml
+++ b/challenge_config.yaml
@@ -5,7 +5,7 @@ short_description: Disentangled Representation Learning for Real-world Applicati
 description: templates/description.html
 evaluation_details: templates/evaluation_details.html
 terms_and_conditions: templates/terms_and_conditions.html
-image: logo.svg
+image: logo.jpg
 submission_guidelines: templates/submission_guidelines.html
 leaderboard_description: Leaderboard for the DRL for Real competition, evaluating disentangled representation learning methods on realistic datasets. Models are ranked based on their performance in disentanglement, robustness, interpretability, and practical utility in real-world applications.
 evaluation_script: evaluation_script.zip
@@ -15,8 +15,6 @@ end_date: 2025-10-31 23:59:59
 published: True
 tags: 
   - disentangled-representation-learning
-  - representation-learning
-  - machine-learning
   - computer-vision
   - interpretability
   - generative-models
