--- a/challenge_config.yaml
+++ b/challenge_config.yaml
@@ -48,7 +48,7 @@ challenge_phases:
   - id: 1
     name: Dev Phase
     description: templates/challenge_phase_1_description.html
-    leaderboard_public: False
+    leaderboard_public: True
     is_public: True
     challenge: 1
     is_active: True
